--- a/Case/GID_Test/readme
+++ b/Case/GID_Test/readme
@@ -5,5 +5,6 @@ and the values of parameters in these quadrants
 is set same as that of parent cell.
 
 Flow is simulated for same time for both refined and unrefined mesh
-and difference in parameters after simulation is analyzed between them.
+and difference in parameters after simulation is analyzed between them
+along the horizontal and vertical bisectors of slice mesh.
 
